<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanji Notepad</string>
    <string name="no_kanji">No kanji found for this category</string>
    <string name="create_db_start">Creating Kanji Database...</string>
    <string name="create_db_stop">Kanji Database created!</string>
    <string-array name="filters">
        <item >All</item>
        <item >Favorites</item>
        <item >JLPT N1</item>
        <item >JLPT N2</item>
        <item >JLPT N3</item>
        <item >JLPT N4</item>
        <item >JLPT N5</item>
    </string-array>
    <string name="filter_select">Select your kanji set</string>
    <string name="kanji_details">Kanji Informations</string>
    <string name="on_yomi">ON Yomi</string>
    <string name="kun_yomi">KUN Yomi</string>
    <string name="kanji_words">Words using this kanji</string>
	<string name="jlpt">JLPT</string>
	<string name="stroke_number">Strokes number</string>
	<string name="meaning">Meaning</string>
	<string name="bushu">Bushu</string>
	
</resources>