<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kanji_details"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvJLPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jlpt"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>
    
    <TextView
        android:id="@+id/kanjiJLPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>
    
    <TextView
        android:id="@+id/tvStrokesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stroke_number"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>
    
    <TextView
        android:id="@+id/kanjiStrokeNbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>
    
    <TextView
        android:id="@+id/tvON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_yomi"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/kanjiON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/tvKUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kun_yomi"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/kanjiKUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>
    
    <TextView
        android:id="@+id/tvMeaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meaning"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>
    
    <TextView
        android:id="@+id/kanjiMeaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/tvBushu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bushu"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"/>
    
    <TextView
        android:id="@+id/kanjiBushu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>

</LinearLayout>